--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@ crossorigin="anonymous"></script>
       <div class="py-4">
         <div class="mx">
           <div class="row">
-            <div class="col-md-5">
-              <div class="b">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                &nbsp;&nbsp; <img src="img/me.jpg" class="img-thumbnail" alt=""
+            <div class="col--sm-6 col-md-6 ">
+              <div class="b"> <img src="img/me.jpg" class="img-thumbnail" alt=""
                   style="width: 200px; height: 200px;"> <br>
                 <br>
                 <div class="normal1">
@@ -46,16 +45,16 @@ crossorigin="anonymous"></script>
                   </div>
                 </div>
                 <div class="p-4">
-                  <div class="f1">&nbsp; <img src="img/icons8-phone-30.png" alt=""><img
+                  <div class="f1"> <img src="img/icons8-phone-30.png" alt=""><img
                       src="img/icons8-line-30.png" alt="">0972581207<br>
                     <br>
-                    &nbsp; <img src="img/icons8-email-30.png" alt=""><img src="img/icons8-line-30.png"
+                    <img src="img/icons8-email-30.png" alt=""><img src="img/icons8-line-30.png"
                       alt="">phitchayaa07@gmail.com </div>
                   <br>
-                  <div class="f1">&nbsp; <img src="img/icons8-location-30.png"
-                      alt=""><img src="img/icons8-line-30.png" alt="">179,
-                    Village No.1, Chongsakae&nbsp; Subdistrict, Muang District,
-                    Phetchaburi, 76000 </div>
+                  <div class="f1"><img src="img/icons8-location-30.png" alt=""><img
+                      src="img/icons8-line-30.png" alt="">179, Village No.1,
+                    Chongsakae&nbsp; Subdistrict, Muang District, Phetchaburi,
+                    76000 </div>
                 </div>
                 <br>
                 <div class="normal1">
@@ -68,36 +67,32 @@ crossorigin="anonymous"></script>
                   <div class="f1">
                     <h5> <span class="OYPEnA text-decoration-none text-strikethrough-none"
                         style="color: rgb(30, 25, 25); font-weight: 400; font-style: normal;">Basic
-                        computer&nbsp;</span>&nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp; <img src="img/icons8-filled-circle-24%20%281%29.png"
-                        alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
+                        computer literacy skills</span><br>
+                      <img src="img/icons8-filled-circle-24%20%281%29.png" alt=""
+                        style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
-                        alt="" style="width: 20px; height: 20px;"> literacy
-                      skills </h5>
+                        alt="" style="width: 20px; height: 20px;"> </h5>
                     <br>
-                    <h5> Project &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="img/icons8-filled-circle-24%20%281%29.png"
-                        alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
+                    <h5> Project Management <br>
+                      <img src="img/icons8-filled-circle-24%20%281%29.png" alt=""
+                        style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 18px; height: 18px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
-                        alt="" style="width: 19px; height: 19px;">&nbsp;
-                      Management</h5>
+                        alt="" style="width: 19px; height: 19px;"> </h5>
                     <br>
-                    <h5> Communication &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <img
-                        src="img/icons8-filled-circle-24%20%281%29.png" alt="" style="width: 19px; height: 19px;">
+                    <h5> Communication <br>
                       <img src="img/icons8-filled-circle-24%20%281%29.png" alt=""
                         style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
+                        alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 18px; height: 18px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"> </h5>
                     <br>
                     <h5> </h5>
-                    <h5>
-                      Teamwork&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <h5> Teamwork <br>
                       <img src="img/icons8-filled-circle-24%20%281%29.png" alt=""
                         style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
@@ -115,28 +110,25 @@ crossorigin="anonymous"></script>
                 </div>
                 <div class="p-4">
                   <div class="f1">
-                    <h5> Thai&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <img src="img/icons8-filled-circle-24%20%281%29.png"
-                        alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
+                    <h5> Thai <br>
+                      <img src="img/icons8-filled-circle-24%20%281%29.png" alt=""
+                        style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"></h5>
                     <br>
-                    <h5> English&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="img/icons8-filled-circle-24%20%281%29.png"
-                        alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
+                    <h5> English <br>
+                      <img src="img/icons8-filled-circle-24%20%281%29.png" alt=""
+                        style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"></h5>
                     <br>
-                    <h5> Korean&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                      &nbsp;&nbsp;&nbsp; <img src="img/icons8-filled-circle-24%20%281%29.png"
-                        alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
+                    <h5> Korean<br>
+                      <img src="img/icons8-filled-circle-24%20%281%29.png" alt=""
+                        style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24%20%281%29.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
                         alt="" style="width: 19px; height: 19px;"> <img src="img/icons8-filled-circle-24.png"
@@ -146,7 +138,7 @@ crossorigin="anonymous"></script>
               </div>
               <br>
             </div>
-            <div class="col-md-7"> <br>
+            <div class="col-md-6"> <br>
               <br>
               <br>
               <br>
