--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
                 </div>
                 &nbsp; <br>
                 <div class="f1">
-                  <h5>My name is Phitchaya Tetyaem, I'm a fourth-year student. I
-                    am currently studying Information science and Library
-                    science at Silpakorn University. </h5>
+                  <h5 style="color: #252525;">My name is Phitchaya Tetyaem, and
+                    I'm a third-year student. I am currently studying
+                    information science and library science at Silpakorn
+                    University.</h5>
+                  <h5></h5>
                 </div>
               </div>
               <div class="col-md-6">
@@ -161,7 +163,7 @@
                     <h5><br>
                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>CPALL</strong>
                     </h5>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="img/icons8-filled-circle-24%20%281%29.png"
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/icons8-circle-27%20%281%29.png"
                       alt="" style="width: 10px; height: 10px;"> Cashier<br>
                     <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
