--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                   aria-label="Slide 3"></button> </div>
               <div class="carousel-inner">
-                <div class="carousel-item active"> <img src="img/welcome.png" alt=""><br>
+                <div class="carousel-item active"> <img src="img/welcome.png" class="img-fluid"><br>
                   <div class="carousel-caption d-none d-md-block">
                     <p>My Resume</p>
                   </div>
